# metada

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/modules/: ClangFormat.cmake  CodeQuality.cmake  FindClangFormat.cmake  FindClangTidy.cmake  FindGlog.cmake  FindSphinx.cmake  PackageRegistry.cmake  PrintSummary.cmake
docs/: CMakeLists.txt  Doxyfile.in
docs/source/: api.rst  conf.py  conf.py.in  index.rst  installation.rst  usage.rst
include/: CMakeLists.txt  MPILogger.hpp  MyClass.hpp  ParallelBase.hpp
src/: CMakeLists.txt  MyClass.cpp  ParallelBase.cpp  main.cpp
tests/: CMakeLists.txt  test_parallel.cpp
